--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dra. Julia Lavigne | Advocacia Estratégica</title>
-    <link rel="icon" type="image/png" href="https://i.ibb.co/Q7pQX2d7/Logotipo-Sem-Fundo.png" />
+    <link rel="icon" type="image/png" href="./logo.png" />
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <style>
@@ -48,10 +48,8 @@
   }
 }
 </script>
-<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-[#0f1115] text-[#f3f4f6]">
     <div id="root"></div>
-  <script type="module" src="/index.tsx"></script>
   </body>
 </html>
