--- a/index.html
+++ b/index.html
@@ -48,8 +48,10 @@
   }
 }
 </script>
+<link rel="stylesheet" href="/index.css">
 </head>
   <body class="bg-[#0f1115] text-[#f3f4f6]">
     <div id="root"></div>
+  <script type="module" src="/index.tsx"></script>
   </body>
 </html>
